--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ margin-top: 70px;
     border-radius: 10px;
 }
 .follower{
-    margin-left: 50px;
+    width: 30%;
+ 
     text-align: center;
     
     
